# slullama

./: CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: publish.yml
src/slullama/: __init__.py  cli.py  config.py  litellm_provider.py  template.py
src/slullama/client/: client.py  tunnel.py
src/slullama/server/: proxy.py  slurm.py  tunnel.py
tests/: conftest.py  test_config.py  test_template.py
