[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slullama"
version = "0.1.0"
description = "Shared Ollama gateway over Slurm — wake a GPU node on demand"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
litellm = ["litellm>=1.0,!=1.82.7,!=1.82.8"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
slullama = "slullama.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/slullama"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/slullama/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
