[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slullama"
version = "0.1.1"
description = "Shared Ollama gateway over Slurm — wake a GPU node on demand"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Reto Stamm", email = "reto@retostamm.com" }]
keywords = ["ollama", "slurm", "gpu", "llm", "gateway"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "aiohttp>=3.9",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/retospect/slullama"
Repository = "https://github.com/retospect/slullama"

[project.optional-dependencies]
litellm = ["litellm>=1.0,!=1.82.7,!=1.82.8"]

[project.scripts]
slullama = "slullama.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.11",
    "mypy>=1.15",
    "pre-commit>=4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/slullama"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
